crates/graphql-orm/tests/ui/mssql_composite_mutation_unavailable.stderr
error: repository_mutations are not available for the read-only MSSQL backend
  --> tests/ui/mssql_composite_mutation_unavailable.rs:11:8
   |
11 | struct PrivateGrant {
   |        ^^^^^^^^^^^^
